Add alt text and styling

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <meta name="keywords" content="Calvin, Hobbes">
     <meta name="author" content="Original comic by: Bill Watterson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 
 <body>
-    <img src="https://i.redd.it/8hyum1ncnf7a1.jpg" />
+    <img alt="Hamster Huey" src="https://i.redd.it/8hyum1ncnf7a1.jpg" />
 </body>
 
 </html>
